svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  namespace: nexus
  name: nexus-svc
spec:
  ports:
    - name: http-port
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: nexus
