ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nexus
  name: nexus-ing
spec:
  tls:
  - hosts:
    - HOSTNAME
    secretName: SECRET
  rules:
  - host: HOSTNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-svc
            port:
              number: 8081
